--- a/caret_lab.rmd
+++ b/caret_lab.rmd
@@ -25,18 +25,26 @@ Task1: Create a Validation/Training Dataset
 You need to split the loaded dataset into two, 80% of which we will use to train our models and 20% that we will hold back as a validation dataset.
 Hint: use createDataPartition function
 ```{r}
-
+set.seed(100)
+trainRowNumbers <- createDataPartition(dataset$Species, p=0.8, list=FALSE)
+trainData <- dataset[trainRowNumbers,]
+testData <- dataset[-trainRowNumbers,]
 ```
 
 Task2: Summarize Dataset
 Use skimr library to summarize the dataset
 ```{r}
+library(skimr)
+skimmed<-skim(trainData)
+skimmed
 
 ```
 
 Task3: split input and output
  It is the time to seperate the input attributes and  the output attributes. call the inputs attributes x and the output attribute (or class) y.
 ```{r}
+x = trainData[,1:4]
+y = trainData[,5]
 
 ```
 
@@ -59,6 +67,23 @@ Train 5 different algorithms using 'train' function:
 - Random Forest (RF)
 
 ```{r}
+# Set the seed for reproducibility
+set.seed(100)
+# Train the model using LDA on the training data itself.
+lda_model = train(Species ~ ., data=trainData, method='lda', trControl=control, metric=metric) 
+# Set the seed for reproducibility
+set.seed(100)
+# Train the model using rpart on the training data itself.
+rpart_model = train(Species ~ ., data=trainData, method='rpart', trControl=control, metric=metric) #--------------------------------------------------------------------------- # Set the seed for reproducibility
+set.seed(100)
+# Train the model using kNN on the training data itself.
+knn_model = train(Species ~ ., data=trainData, method='knn', trControl=control, metric=metric) #--------------------------------------------------------------------------- # Set the seed for reproducibility
+set.seed(100)
+# Train the model using svmRadial on the training data itself.
+svm_model = train(Species ~ ., data=trainData, method='svmRadial', trControl=control, metric=metric) #--------------------------------------------------------------------------- # Set the seed for reproducibility
+set.seed(100)
+# Train the model using rf on the training data itself.
+rf_model = train(Species ~ ., data=trainData, method='rf', trControl=control, metric=metric)
 
 
 ```
@@ -68,6 +93,10 @@ We now have 5 models and accuracy estimations for each. We need to compare the m
 Use resamples function to complete this task
 
 ```{r}
+# Compare model performances using resample()
+models_compare<-resamples(list(lda=lda_model, rpart=rpart_model, knn=knn_model, svm=svm_model, rf=rf_model))
+# Summary of the models performances
+summary(models_compare)
 
 
 ```
@@ -78,6 +107,9 @@ Task7: Make Prediction (Confusion Matrix)
 Now we want to get an idea of the accuracy of the best model on our validation set. Use 'predict' and confusionMatrix functions to complete this task.
 
 ```{r}
+# Predict on testData using lda_model
+predicted <- predict(lda_model, testData) 
+confusionMatrix(reference= testData$Species,data = predicted)
 
 
 ```
